# sol-idl-generator

./: Anchor.toml  id.json
metaplex/: Cargo.toml
metaplex/src/: metadata.rs
programs/dooar/: Cargo.toml
programs/dooar/src/: lib.rs
programs/idl_generator/: Cargo.toml
programs/idl_generator/src/: lib.rs  mint.rs  my_struct.rs  program_context.rs
programs/metaplex/: Cargo.toml
programs/metaplex/src/: data_struct.rs  lib.rs  metadata.rs
programs/sol_token/: Cargo.toml
programs/sol_token/src/: lib.rs  mint.rs  spl2022.rs
sol_token/: Anchor.toml  Cargo.toml
sol_token/src/: lib.rs  mint.rs
