[package]
name = "metaplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]
name = "metaplex_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
solana-program = "=1.17.22"
mpl-token-metadata = { version = "3.2.3" }
spl-associated-token-account = "=1.1.3"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
md5 = "0.7.0"